--- a/JSON2C_examples.ipynb
+++ b/JSON2C_examples.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOCmVGWhTQFfkpjplV5iIQ",
+      "authorship_tag": "ABX9TyNgpoLpMIoA93EW4Aqm6MZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -289,6 +289,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook lives at: https://github.com/lidar532/JSON2C."
+      ],
+      "metadata": {
+        "id": "BsQSSQNBs_4U"
+      }
     }
   ]
 }
