Added text cell to link to the master at github.

--- a/JSON2C.ipynb
+++ b/JSON2C.ipynb
@@ -7,8 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMswsQD1gsEl8M0rThFFzHp",
+      "authorship_tag": "ABX9TyO0k2COp3LnL+OQxjMPFYu7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,10 +33,7 @@
       "cell_type": "markdown",
       "source": [
         "# Convert JSON string to a \"C\" sprintf formatting string.\n",
-        "Enter or paste a JSON string below that you would like to conver to a \"C\" sprintf formatting\n",
-        "statement for use in an Arduino or other project.  The JSON will be converted to a\n",
-        "compilable \"C\" language formatting string you can copy to your Arduino code.  You can use [JASONata](https://try.jsonata.org/) or [JSON Editor Online](https://jsoneditoronline.org/) or other JSON tool to build, verify, and test your JSON string. Simply use \"C\" formatting specifiers where your values go, and js2C will generate the \"C\" formatting string for you.  Note that you can enter a \"C\" comment \n",
-        "by using the `\"comment_\"` JSON key and placing your comment text as the value string.  You can name your \"C\" format variable with the JSON key `\"format_name_\"` with the desired \"C\" name in the value string.  See the example below.  I enclosed my JSON in triple quotes `'''` but it should work ok with single quotes as well.  After you enter your JSON string, press the Run arrow button to load it into the js variable. "
+        "Enter or paste a JSON string below that you would like to convert to a \"C\" sprintf formatting statement for use in an Arduino or other project.  The JSON will be converted to a compilable \"C\" language formatting string you can copy to your Arduino code.  You can use [JASONata](https://try.jsonata.org/) or [JSON Editor Online](https://jsoneditoronline.org/) or other JSON tool to build, verify, and test your JSON string. Simply use \"C\" formatting specifiers where your values go, and JSON2C will generate the \"C\" formatting string for you.  Note that you can also enter a \"C\" comment by using the `\"comment_\"` JSON key and placing your comment text as the JSON value string.  You can name your \"C\" format variable with the JSON key `\"format_name_\"` with the desired \"C\" name in the value string.  See the example below.  I enclosed my JSON in triple quotes `'''` but it should work ok with single quotes as well.  After you enter your JSON string, press the Run arrow button to load it into the js variable use for conversion. "
       ],
       "metadata": {
         "id": "lICiFEP_PSKq"
@@ -51,32 +47,25 @@
       },
       "outputs": [],
       "source": [
-        "#@title Step 1. Put your JSON here. { display-mode: \"both\" }\n",
+        "#@title Example 1. Put your JSON here in the `js` variable. { form-width: \"25%\", display-mode: \"both\" }\n",
+        "#@markdown Run this cell , and then run Step 2 below to convert the JSON to a \"C\" format string.\n",
+        "\n",
         "js = '''\n",
         "{ \n",
         "  \"format_name_\":\"my_name\",\n",
-        "  \"comment_\": \" This is a comment. It can contain numbers and any of the following chars {}[],.;?<>| %^&*()@#$ : %!\",\n",
         "  \"myJSON\": {\n",
         "    \"dest\": \"%s\",\n",
         "    \"sss\": \"%0.2f\",\n",
-        "    \"flash\": [\n",
-        "      \"%f\",\n",
-        "      \"%4.2lf\",\n",
-        "      \"%ld\",\n",
-        "      \"%lu\",\n",
-        "      \"%u\",\n",
-        "      \"%d\",\n",
-        "      \"%c\"\n",
-        "    ]\n",
+        "    \"flash\": [ \"%f\", \"%4.2lf\", \"%ld\", \"%lu\", \"%u\", \"%d\", \"%c\" ]\n",
         "  }\n",
         "}\n",
-        "'''"
+        "'''\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#@title Step 2. Click the Run button to do the conversion.  { display-mode: \"form\" }\n",
+        "#@title Step 2. Click the Run button to the left to do the conversion.  { display-mode: \"form\" }\n",
         "#@markdown Your orginal JSON will be encapsulated in \n",
         "#@markdown within a \"C\" ```/* comment */``` block and\n",
         "#@markdown the \"C\" format string below.  Copy and paste the resulting \n",
@@ -107,11 +96,11 @@
         "  if m:\n",
         "    js1 = js[0:m.start()]+js[m.end():]\n",
         "    comment = f'{m.groups()[2]}'\n",
-        "    js2 = js1[0:m.start()]+js1[m.end():]\n",
+        "    js1 = js[0:m.start()]+js[m.end():]\n",
         "    #print(f'/*\\n {comment}\\n/*\\n {js1}')\n",
         "  else:\n",
         "    comment = \"\"\n",
-        "    js2 = js\n",
+        "    js1 = js\n",
         "\n",
         "  regex = \"[ \\t]*\\\"format_name_\\\"\\ *: *(\\\")(.*)(\\\"),[\\s\\n]*\"\n",
         "  m = re.search(regex, js1, re.MULTILINE )\n",
@@ -162,12 +151,20 @@
         "  js12 = f'{var_def}\\n{js11};'\n",
         "  #return js12\n",
         "\n",
+        "  t = js12.splitlines(keepends=True)                # indent \"C\" vars.\n",
+        "  v = \"    \".join(t[1:])                               # Add tabs  \n",
+        "  js12a = t[0]+v                                     # prepend first line                                     \n",
+        "  #return js12a\n",
+        "\n",
         "  doc = \"/* This was autogenerated from the above JSON using js2c.ipynb */\"\n",
-        "  js13 = f'/* {comment} {js} */\\n\\n{doc}\\n{js12}\\n\\n'\n",
+        "  js13 = f'/* {comment} {js} */\\n\\n{doc}\\n{js12a}\\n\\n'\n",
         "  return js13\n",
         "\n",
-        "jsc = js2c(js)\n",
-        "print(jsc)"
+        "if 'js' in globals():\n",
+        "  jsc = js2c(js)\n",
+        "  print(jsc)\n",
+        "else:\n",
+        "  print('You need to put some JSON in variable `js` first.')"
       ],
       "metadata": {
         "id": "JIDyikWvatOo"
@@ -176,46 +173,35 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#@title Step 3. Generate a test.c program that will output your JSON string. { display-mode: \"form\" }\n",
-        "tester = {\"name\":\"test1\",\n",
-        "\"src\"  : f'''\n",
-        "#include <stdio.h>\n",
-        "\n",
-        "{jsc}\n",
-        "\n",
-        "int main()\n",
-        "{{\n",
-        "    char                s[] =\"a string\";\n",
-        "    float               a   = 1.0;\n",
-        "    double              b   = 2.0;\n",
-        "    float               c   = 3.0;\n",
-        "    long int            d   = 4;\n",
-        "    unsigned long int   e   = 5;\n",
-        "    unsigned int        f   = 6;\n",
-        "    int                 g   = 7;\n",
-        "    char                h   = 'C';\n",
-        "    printf(\"\\\\nYour serialized JSON string is below. \\\\n\"\n",
-        "    \"Copy and paste to https://try.jsonata.org/ to verify it.\\\\n\\\\n\");\n",
-        "    printf( my_name, s, a, b, c, d, e, f, g, h );\n",
-        "    return 0;\n",
-        "}}\n",
-        "'''\n",
-        "}\n",
-        "\n",
-        "if os.path.exists( '/usr/bin/clang-format') == 0:     # Install clang-format if not present\n",
-        "  ! apt-get install clang-format\n",
-        "\n",
-        "tester['name.c'] = f\"{tester['name']}.c\"\n",
-        "tester['output'] = f\"{tester['name']}.json\"\n",
-        "with open(tester['name.c'], 'w') as file:\n",
-        "    file.write(tester['src'])\n",
-        "\n",
-        "! clang-format {tester['name.c']}"
+        "## Additional Example JSON messages.  \n",
+        "The cells below each have more examples of JSON messages.  To use them\n",
+        "simple run the example cell, and then run \"Step 2.\" above to convert \n",
+        "the JSON message into a \"C\" format string.  You can paste the example \n",
+        "JSON into https://try.jsonata.org/ to verify it.\n"
       ],
       "metadata": {
-        "id": "wUnP9_1HN85F"
+        "id": "PT3vTcq4oBHO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Example 2. { form-width: \"25%\", display-mode: \"both\" }\n",
+        "#@markdown Run this cell , and then run Step 2 below to convert the JSON to a \"C\" format string.\n",
+        "\n",
+        "js = '''\n",
+        "  {\n",
+        "     \"sensor\": \"%s\",\n",
+        "     \"time\": %d,\n",
+        "     \"data\": [ %f, %f]\n",
+        "   }\n",
+        "\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "-uxbEXc_L6V8"
       },
       "execution_count": null,
       "outputs": []
@@ -223,21 +209,65 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Step 4. Compile the test program with `gcc`, run it and cat the JSON output  \n",
-        "# Test with gcc.\n",
-        "if os.path.exists( '/usr/bin/clang-format') == 0:     # Install clang-format if not present\n",
-        "  ! apt-get install clang-format\n",
-        "! gcc {tester['name.c']} -o {tester['name']}          # compile the test program.\n",
-        "! ./{tester['name']} > {tester['output']}             # now run it.\n",
-        "#! clang-format {tester['output']}                     # Pretty print the resulting JSON.\n",
-        "! cat {tester['output']}"
+        "#@title Example 3. GeoJSON Example. { form-width: \"25%\", display-mode: \"both\" }\n",
+        "#@markdown see: https://geojson.org/\n",
+        "#@markdown Run this cell , and then run Step 2 below to convert the JSON to a \"C\" format string.\n",
+        "\n",
+        "js = '''\n",
+        "{\n",
+        "  \"type\": \"Feature\",\n",
+        "  \"geometry\": {\n",
+        "    \"type\": \"Point\",\n",
+        "    \"coordinates\": [\"%f\", \"%f\"]\n",
+        "  },\n",
+        "  \"properties\": {\n",
+        "    \"name\": \"Dinagat Islands\"\n",
+        "  }\n",
+        "}\n",
+        "'''"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "wLIyfJBbgDzr"
+        "id": "fGDzdE98OwDX"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Example 4. Some nested JSON with GPS data. { form-width: \"25%\", display-mode: \"both\" }\n",
+        "js = '''\n",
+        "  {\n",
+        "    \"format_name_\" : \"JSON_gps_status_fmt\",\n",
+        "     \"ppksyslogger\": {\n",
+        "       \"sss\" : \"%f\",\n",
+        "       \"gps_stat\" : {\n",
+        "         \"utc\" : \"%9.2f\",\n",
+        "         \"nsat\" : \"%d\",\n",
+        "         \"Q\" : \"%d\",\n",
+        "         \"GPS_good\" : \"%d\",\n",
+        "         \"raw_b\" : \"[%ld,%ld]\",\n",
+        "         \"ascii_b\" : \"[%ld,%ld]\",\n",
+        "         \"pass_b\" : \"[%ld,%ld]\"\n",
+        "       }\n",
+        "     }\n",
+        "   } \n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "59BKnH5IaK-G"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook lives at: https://github.com/lidar532/JSON2C."
+      ],
+      "metadata": {
+        "id": "6H8hHbjmtq3i"
+      }
     }
   ]
 }
