Added a link to the examples.

--- a/JSON2C.ipynb
+++ b/JSON2C.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO0k2COp3LnL+OQxjMPFYu7",
+      "authorship_tag": "ABX9TyOa7kpTHgl8XPd6Y/U1o5lM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
       "cell_type": "markdown",
       "source": [
         "# Convert JSON string to a \"C\" sprintf formatting string.\n",
-        "Enter or paste a JSON string below that you would like to convert to a \"C\" sprintf formatting statement for use in an Arduino or other project.  The JSON will be converted to a compilable \"C\" language formatting string you can copy to your Arduino code.  You can use [JASONata](https://try.jsonata.org/) or [JSON Editor Online](https://jsoneditoronline.org/) or other JSON tool to build, verify, and test your JSON string. Simply use \"C\" formatting specifiers where your values go, and JSON2C will generate the \"C\" formatting string for you.  Note that you can also enter a \"C\" comment by using the `\"comment_\"` JSON key and placing your comment text as the JSON value string.  You can name your \"C\" format variable with the JSON key `\"format_name_\"` with the desired \"C\" name in the value string.  See the example below.  I enclosed my JSON in triple quotes `'''` but it should work ok with single quotes as well.  After you enter your JSON string, press the Run arrow button to load it into the js variable use for conversion. "
+        "Enter or paste a JSON string below that you would like to convert to a \"C\" sprintf formatting statement for use in an Arduino or other project.  The JSON will be converted to a compilable \"C\" language formatting string you can copy to your Arduino code.  You can use [JASONata](https://try.jsonata.org/) or [JSON Editor Online](https://jsoneditoronline.org/) or other JSON tool to build, verify, and test your JSON string. Simply use \"C\" formatting specifiers where your values go, and JSON2C will generate the \"C\" formatting string for you.  Note that you can also enter a \"C\" comment by using the `\"comment_\"` JSON key and placing your comment text as the JSON value string.  You can name your \"C\" format variable with the JSON key `\"format_name_\"` with the desired \"C\" name in the value string.  See the example below.  I enclosed my JSON in triple quotes `'''` but it should work ok with single quotes as well.  After you enter your JSON string, press the Run arrow button to load it into the js variable use for conversion.  Additional examples are in this notebook [<img src=https://colab.research.google.com/assets/colab-badge.svg>](https://colab.research.google.com/github/lidar532/JSON2C/blob/main/JSON2C_examples.ipynb) and can be compiled and run right in Colab."
       ],
       "metadata": {
         "id": "lICiFEP_PSKq"
